canary-deployment/base/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robokart
  namespace: robokart
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,version=base,Project=robokart
    alb.ingress.kubernetes.io/group.name: robokart
    alb.ingress.kubernetes.io/actions.default: >
      {"Type": "forward", "TargetGroups": [
        {"ServiceName": "web", "ServicePort": 80, "Weight": 0},
        {"ServiceName": "web-canary", "ServicePort": 80, "Weight": 100}
      ]}
spec:
  ingressClassName: alb
  rules:
  - host: "robokart.royalreddy.site"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-green
            port:
              number: 80
